web-admin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-admin
    service: web-admin
  name: web-admin
  namespace: web-admin
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: web-admin
  type: ClusterIP
