web-admin/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-admin
  namespace: web-admin
spec:
  podSelector:
    matchLabels:
      app: web-admin
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web-admin
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
  egress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
